--- a/style.css
+++ b/style.css
@@ -9,16 +9,37 @@
     --item-bg-color: #fff;
     --item-border-color: #ccc;
     --nav-hover-bg-color: #d3d3d3; /* Gray color for highlight */
+
+    --prussian-blue: #0f384f;
+    --rich-black: #04151f;
+    --princeton-orange: #ff8f0f;
+    --antiflash-white: #EBEBEB;
 }
 
-body {
-    font-family: "Gill Sans", sans-serif;
+body, html {
     margin: 0;
     padding: 0;
-    line-height: 1.6;
+    font-family: "Gill Sans", sans-serif;
+    height: 100%;
+    background: linear-gradient(-45deg, var(--prussian-blue), var(--rich-black), var(--princeton-orange));
+    background-size: 1000% 1000%;
+    animation: gradient 15s ease infinite;
+    scroll-behavior: smooth;
+}
+
+@keyframes gradient {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+.container {
     display: flex;
     flex-direction: column;
-    background-color: var(--secondary-color);
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    color: var(--antiflash-white);
 }
 
 header {
@@ -74,31 +95,52 @@ header h1 {
     }
 }
 
-nav {
-    background: linear-gradient(270deg, var(--secondary-color), var(--hover-color), var(--secondary-color));
-    background-size: 200% 200%;
-    animation: gradient-animation 10s ease infinite;
-    padding: 0.75rem;
-    flex: 0 0 auto;
+.navbar {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 1rem 0;
+    position: -webkit-sticky; /* For Safari */
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* Ensure the navbar is above other elements */
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+.menu-icon {
+    display: none;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--antiflash-white);
+}
+
+.navbar ul {
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-nav ul li {
-    margin-right: 10px;
+.navbar ul li {
+    margin: 0 1rem;
 }
 
-nav ul li a {
+.navbar ul li a {
     text-decoration: none;
-    color: var(--primary-color);
-    transition: color 0.3s ease;
+    color: var(--antiflash-white);
+    font-weight: bold;
+    transition: color 0.3s, background-color 0.3s;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+}
+
+.navbar ul li a:hover {
+    color: var(--princeton-orange);
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.navbar ul li a.active {
+    background-color: var(--princeton-orange);
+    color: var(--rich-black);
 }
 
 nav ul li a:hover {
@@ -106,34 +148,29 @@ nav ul li a:hover {
     background-color: var(--nav-hover-bg-color); /* Gray highlight effect */
 }
 
-.nav-toggle {
-    display: none;
-    background-color: var(--primary-color);
-    color: var(--text-color);
-    border: none;
-    padding: 10px;
-    font-size: 1.5rem;
-    cursor: pointer;
-}
+@media (max-width: 768px) {
+    .navbar ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
 
-@media (max-width: 600px) {
-    .nav-toggle {
+    .navbar ul li {
+        margin: 0.5rem 0;
+    }
+
+    .menu-icon {
         display: block;
     }
+}
 
-    nav ul {
-        flex-direction: column;
-        display: none; /* Hide nav initially */
-    }
-
-    nav ul.showing {
-        display: flex; /* Show nav when toggled */
-    }
-
-    nav ul li {
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
+.show {
+    display: flex !important;
+    flex-direction: column;
 }
 
 main {
@@ -220,40 +257,30 @@ main {
 }
 
 footer {
-    background-color: var(--primary-color);
-    color: var(--text-color);
-    text-align: center;
-    padding: 1rem;
-    position: relative;
-    flex: 0 0 auto;
-}
-
-.chart-container {
-    position: relative;
-    margin: auto;
-    height: auto;
-    width: 400px;
-}
-
-table {
     width: 100%;
-    border-collapse: collapse;
-    margin: 1rem 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: var(--antiflash-white);
+    text-align: center;
+    padding: 1rem 0;
+    position: fixed;
+    bottom: 0;
 }
 
-table th, table td {
-    padding: 0.75rem;
-    text-align: left;
-    border: 1px solid var(--item-border-color);
+footer p {
+    font-size: 0.9rem; /* Smaller font size for footer text */
 }
 
-table th {
-    background-color: var(--primary-color);
-    color: var(--text-color);
+footer p a {
+    font-size: 0.9rem; /* Ensure links in the footer are also smaller */
 }
 
-table tr:nth-child(even) {
-    background-color: var(--secondary-color);
+footer a {
+    color: var(--princeton-orange);
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
 
 /* Tooltip container */
@@ -299,4 +326,124 @@ table tr:nth-child(even) {
 [data-tooltip]:hover::before {
     opacity: 1;
     visibility: visible;
+}
+
+/* Project Card Styling */
+.project-card {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: var(--antiflash-white);
+    border-radius: 10px;
+    padding: 1rem;
+    margin: 1rem;
+    width: 300px;
+    max-width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.project-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.project-card img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+
+.project-card h2 {
+    font-size: 1.1rem;
+    margin: 0.5rem 0;
+}
+
+.project-card p {
+    font-size: 0.8rem;
+    margin: 0.5rem 0 1rem 0;
+}
+
+.project-card a {
+    text-decoration: none;
+    color: var(--princeton-orange);
+    font-weight: bold;
+}
+
+.project-card a:hover {
+    text-decoration: underline;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: fadeIn 3s ease;
+    min-height: 100vh; /* Ensure each content section takes full height of the viewport */
+    padding: 2rem 1rem;
+    opacity: 0; /* Start hidden */
+    transition: opacity 2s ease-in-out; /* Smooth fade-in */
+}
+
+.content.appear {
+    opacity: 1; /* Visible when in view */
+}
+
+h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+p {
+    font-size: 1rem;
+    margin-bottom: 1.1rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input[type="email"] {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    width: 250px;
+    max-width: 80%;
+}
+
+button[type="submit"] {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--princeton-orange);
+    color: var(--rich-black);
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover {
+    background-color: var(--prussian-blue);
+    color: var(--princeton-orange);
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 1rem 0;
+}
+
+table th, table td {
+    padding: 0.75rem;
+    text-align: left;
+    border: 1px solid var(--item-border-color);
+}
+
+table th {
+    background-color: var(--primary-color);
+    color: var(--text-color);
+}
+
+table tr:nth-child(even) {
+    background-color: var(--secondary-color);
 }
